--- a/ansible/roles/node-exporter/defaults/main.yml
+++ b/ansible/roles/node-exporter/defaults/main.yml
@@ -1,4 +1,5 @@
 ---
+prometheus_config_dir: "/etc/prometheus"
 node_exporter_version: 1.1.2
 node_exporter_binary_local_dir: ""
 node_exporter_web_listen_address: "0.0.0.0:9100"
@@ -26,3 +27,5 @@ node_exporter_disabled_collectors: []
 _node_exporter_binary_install_dir: "/usr/local/bin"
 _node_exporter_system_group: "node-exp"
 _node_exporter_system_user: "{{ _node_exporter_system_group }}"
+_node_exporter_add_to_local_prometheus: "enable"
+_node_exporter_local_env_name: "local-node-exporter"
