--- a/ansible/roles/node-exporter/handlers/main.yml
+++ b/ansible/roles/node-exporter/handlers/main.yml
@@ -7,3 +7,9 @@
     state: restarted
   when:
     - not ansible_check_mode
+
+- name: reload prometheus
+  become: true
+  systemd:
+    name: prometheus
+    state: reloaded
